# Team-24

./: BuildingVisitor.h  CMakeLists.txt  ChangePolicyCommand.h  Citizen.h  HighIncomeTaxStrategy.h  InspectionVisitor.h  LowIncomeTaxStrategy.h  README.md  Research Brief.docx  makefile
.github/: workflows
Activity Diagram/: Activity-Diagram_Prac6.vpp  Activity-Diagram_Prac6.vpp.bak_001d  Activity-Diagram_Prac6.vpp.bak_002d  Activity-Diagram_Prac6.vpp.bak_004d  Activity-Diagram_Prac6.vpp.bak_005d
Activity Diagram Final/: Activity-Diagram_Prac6.vpp.bak_000f  Activity-Diagram_Prac6.vpp.bak_003d
Class Diagram Final/: COS214 Proj V3.vpp  COS214 Proj V3.vpp.bak_088d  COS214 Proj V3.vpp.bak_089d  COS214 Proj V3.vpp.bak_090d  COS214 Proj V3.vpp.bak_091d  COS214 Proj V3.vpp.bak_092d  COS214 Proj V3.vpp.bak_093f  COS214 Proj V3.vpp.bak_094d  COS214 Proj V3.vpp.bak_095d  COS214 Proj V3.vpp.bak_096d  COS214 Proj V3.vpp.bak_097d  COS214 Proj V3.vpp.bak_098d  COS214 Proj V3.vpp.bak_099d  COS214 Proj V3.vpp.bak_100d  COS214 Proj V3.vpp.bak_101d  COS214 Proj V3.vpp.bak_102d  COS214 Proj V3.vpp.bak_103d  (+14 more)
tests/: BuildingTests.cpp  CMakeLists.txt  CityManagerTests.cpp  CommandTests.cpp  CommercialTests.cpp  GovernmentStatisticsTests.cpp  GovernmentTests.cpp  IndustrialTests.cpp  LandmarkTests.cpp  PolicyMementoTests.cpp  PolicyTests.cpp  ResourceManagerTests.cpp  RoadTests.cpp  VisitorTests.cpp  ZoneManagerTests.cpp  ZoneTests.cpp
tests/test results/: firstTest.txt  fourthTest.txt  secondTest.txt  testEight.txt  testEleven.txt  testFifteen.txt  testFive.txt  testFourteen.txt  testNine.txt  testSeven.txt  testSix.txt  testSixteen.txt  testTen.txt  testThirteen.txt  testTwelve.txt  thirdTest.txt
(+281 files in other folders)
